=========
Changelog
=========

Version 4.6.0 ALPHA

- Basic Cataclysm dungeon support.
- No longer "officially" supporting AlphaMap. AtlasQuest will still work with AlphaMap (I'm leaving the support code in), but its been a long time since the Boss location numbers matched up. In the future, perhaps with a major rewrite of AtlasQuest I'll be able to work something out to support both Atlas and AlphaMap.
- Merged in Natch's AtlasQuest Helper code importing completed quests from the server.
- Updated Location numbers for all Burning Crusade & Lich King dungeons to match Atlas 1.18.0.
- All quests the used to reward Badges or Emblems now correctly list Justice Points as their rewards.
- Code Bug fixes (Thanks Speedwaystar, Kharthus)
- Increased Dungeon quest limit to 22. AtlasQuest frame now overlaps Atlas frame a tiny bit on Left side, but isn't too noticeable.
- Localizations updated: deDE, ruRU, zhCN.

- Classic Dungeons updated:
	- The Deadmines
	- Wailing Caverns
	- Ragefire Chasm
	- Uldaman
	- Blackrock Depths

- Cataclysm Dungeons added:
	- Blackrock Caverns
	- The Vortex Pinnacle
	


	
Version 4.5.0 BETA

- Basic (very basic) Patch 4.0 support.
- Fixed attainment level for SM: Into The Scarlet Monastery (thanks auha)
- Localizations updated: deDE, zhTW.




Version 4.4.3

- Localizations updated: ruRU, deDE, zhTW.
- Added quest giver for Ruby Sanctum: Trouble at Wyrmrest Temple.
- Updated level for Slave Pens: Shards of Ahune

- Quests added:
	- Blackrock Depths: Direbrew's Dire Brew

- Removed the following seasonal quests no longer ingame (LFG Dungeon Tool replaces them):
	- Slave Pens: Ahune, the Frost Lord
	- Slave Pens: Ahune is here!
	- Slave Pens: Summon Ahune
	- Blackrock Depths: Save Brewfest!
	- Blackrock Depths: Insult Coren Direbrew
	- Shadowfang Keep: Man on the Inside
	- Shadowfang Keep: You've been Served




Version 4.4.2

- Corrected ChatFrame error with patch 3.3.5. AtlasQuest should be fully functional.