@@ -2054,25 +2054,37 @@ AQ_28741_Level = "82"
 
 --------------- INST96 - Throne of the Tides ---------------
 
+Inst96Quest1_QuestID = "28834"
+Inst96Quest2_QuestID = "28836"
 
-AQ__Level = ""
-AQ__Level = ""
-AQ__Level = ""
-AQ__Level = ""
-AQ__Level = ""
-AQ__Level = ""
+Inst96Quest1_HORDE_QuestID = "28833"
+Inst96Quest2_HORDE_QuestID = "28843"
+
+
+AQ_28834_Level = "82"
+AQ_28836_Level = "82"
+AQ_28833_Level = "82"
+AQ_28843_Level = "82"
 
 
 
 --------------- INST97 - The Stonecore ---------------
 
+Inst97Quest1_QuestID = "28866"
+Inst97Quest2_QuestID = "28815"
+Inst97Quest3_QuestID = "28824"
+Inst97Quest4_QuestID = "28814"
 
-AQ__Level = ""
-AQ__Level = ""
-AQ__Level = ""
-AQ__Level = ""
-AQ__Level = ""
-AQ__Level = ""
+Inst97Quest1_HORDE_QuestID = "28866"
+Inst97Quest2_HORDE_QuestID = "28815"
+Inst97Quest3_HORDE_QuestID = "28824"
+Inst97Quest4_HORDE_QuestID = "28814"
+
+
+AQ_28866_Level = "83"
+AQ_28815_Level = "84"
+AQ_28824_Level = "84"
+AQ_28814_Level = "84"
 
 
 
@@ -2095,13 +2107,18 @@ AQ_28779_Level = "84"
 
 --------------- INST99 - Grim Batol ---------------
 
+Inst99Quest1_QuestID = "28852"
+Inst99Quest2_QuestID = "28853"
+Inst99Quest3_QuestID = "28854"
 
-AQ__Level = ""
-AQ__Level = ""
-AQ__Level = ""
-AQ__Level = ""
-AQ__Level = ""
-AQ__Level = ""
+Inst99Quest1_HORDE_QuestID = "28852"
+Inst99Quest2_HORDE_QuestID = "28853"
+Inst99Quest3_HORDE_QuestID = "28854"
+
+
+AQ_28852_Level = "85"
+AQ_28853_Level = "85"
+AQ_28854_Level = "85"
 
 
 
